<resources>
    <string name="app_name">Who Plays</string>
    <string name="create_ads_team">Sfida una squadra</string>
    <string name="create_ads_player">Cerca giocatori</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="home">Home</string>
    <string name="add_me">Add me</string>
    <string name="mod_pass">Modifica Password</string>
    <string name="item_time_who_plays">item_time</string>
    <string name="title_list_calendar">Le mie partite:</string>

    <string name="menu_filter">Filtra</string>
    <string name="restore_all">Ripristina tutto</string>
    <string name="search_type">Tipo ricerca</string>
    <string name="order">Ordina per</string>
    <string name="match_type">Tipo partita</string>
    <string name="distance">Distanza</string>
    <string name="ads_of">Annunci di</string>
    <string name="home_button">Home</string>

    <string-array name="array_order">
        <item>data</item>
        <item>numero di giocatori</item>
    </string-array>

    <string-array name="array_match_type">
        <item>Tutte le partite</item>
        <item>Calcio a 5</item>
        <item>Calcio a 7</item>
        <item>Calcio a 11</item>
    </string-array>

    <string-array name="array_match_type_new_ads">
        <item>Calcio a 5</item>
        <item>Calcio a 7</item>
        <item>Calcio a 11</item>
    </string-array>


    <string name="settings">Impostazioni</string>
    <string name="messages">Posta</string>
    <string name="guide">Guida</string>
    <string name="myInfo">Le mie info</string>
    <string name="logOut">Log Out</string>
    <string name="calendar">Calendario</string>

    <string name="item_type_who_plays">item_type</string>
    <string name="item_place_who_plays">item_place</string>
    <string name="item_date_who_plays">item_date</string>
    <string name="item_creator_who_plays">item_creator</string>

    <string name="item_image_my_team">item_image</string>
    <string name="item_name_my_team">item_name</string>
    <string name="item_foundation_my_team">item_foundation</string>
    <string name="item_rating_my_team">item_rating</string>

    <string name="type_ads_new_event">Tipo annuncio</string>
    <string name="team_ads_new_event">Squadra</string>
    <string name="player_ads_new_event">Cerca giocatore</string>

    //fragment create team ads
    <string name="set_date">Data:</string>
    <string name="set_time">Orario:</string>
    <string name="set_date_button">Set Date</string>
    <string name="set_time_button">Set Time</string>
    <string name="set_place">Impianto sportivo:</string>
    <string name="set_place_button">Set Soccer Field</string>
    <string name="title_activity_maps">Map</string>
    <string name="confirm_place_button">Continue</string>
    <string name="options_create_ads_menu">opzioni</string>
    <string name="number_of_player">N° giocatori richiesti:</string>
    <string name="confirm_ads_creation_button">Crea annuncio</string>

    //activity find player
    <string name="creator_textView">Creatore richiesta:</string>
    <string name="place_textView">Campo:</string>
    <string name="title_list_ads">Annunci disponibili</string>
    <string name="date_textView">Data:</string>
    <string name="time_textView">Ora:</string>
    <string name="number_of_player_ads">N° di giocatori richiesti:</string>
    <string name="player_added">Giocatori giá registrati:</string>
    <string name="address_textView">portami al campo</string>
    <string name="percentage">%</string>
    <string name="button_filter">Applica</string>
    <string name="type_of_match_home">Tipo partita:</string>
    <string name="my_team">Le mie squadre</string>
    <string name="choice_label">Inserisci un nuovo annuncio</string>
    <string name="text_view_choice_type_activity">Sei in cerca di...</string>
    <string name="button_player_choice_type_activity">Giocatori</string>
    <string name="button_team_choice_type_activity">Squadra</string>
    <string name="insert_nick_name_edit_text">Inserisci qui il tuo nick-name</string>
    <string name="nick_name_button">Salva nick-name</string>
    <string name="add_new_team_my_team_button">Aggiungi una nuova squadra</string>
    <string name="search_team_my_team_button">Trova una squadra presente</string>
    <string name="delete_match_find_player_button">Cancella partita</string>
    <string name="remove_partecipation_find_player_button">Togli partecipazione</string>
    <string name="addMe_find_player_button">Aggiungimi alla partita</string>
    <string name="match_full_find_player_button">Partita completa</string>
    <string name="create_team_create_team_button">Crea squadra</string>

</resources>
