<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home2"
            android:title="@string/home" />
        <item
            android:id="@+id/calendar"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/calendar" />
        <item
            android:id="@+id/guide"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/guide" />
    <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/settings" />
    <item
                android:id="@+id/log_out"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/logOut" />
    </group>
</menu>

