<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>

            <TextView
                android:id="@+id/itemPlaceCalendarTextView"
                android:textSize="28sp"
                android:layout_span="3"
                android:layout_weight="1"
                android:text="@string/item_place_who_plays"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/itemDateCalendarTextView"
            android:textSize="18sp"
            android:text="@string/item_date_who_plays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/itemTimeCalendarTextView"
            android:textSize="18sp"
            android:text="@string/item_time_who_plays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <TextView
            android:id="@+id/itemTypeCalendarTextView"
            android:textSize="18sp"
            android:text="@string/item_type_who_plays"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </TableRow>



</TableLayout>