<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textStyle="italic"
        android:layout_marginTop="5sp"
        android:layout_marginLeft="5sp"
        android:layout_marginBottom="5sp"
        android:text="@string/text_view_choice_type_activity"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/button_team_choice_type_activity"
        android:id="@+id/button_team_choice_type_activity"/>

    <Button
        android:layout_width="match_parent"
        android:textSize="20sp"
        android:layout_height="wrap_content"
        android:text="@string/button_player_choice_type_activity"
        android:id="@+id/button_player_choice_type_activity"/>

</LinearLayout>