<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>
        <ImageView
            android:id="@+id/itemImageMyTeamImageView"
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:layout_weight="1"
            android:contentDescription="@string/item_image_my_team"
            android:src="@mipmap/ic_launcher"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/itemNameMyTeamTextView"
                android:textSize="28sp"
                android:layout_marginTop="10sp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/item_name_my_team"/>

            <TextView
                android:id="@+id/itemFoundationMyTeamTextView"
                android:textSize="14sp"
                android:layout_weight="1"
                android:text="@string/item_foundation_my_team"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <TextView
            android:id="@+id/itemRateMyTeamTextView"
            android:layout_width="wrap_content"
            android:layout_marginTop="10sp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="28sp"
            android:text="@string/item_rating_my_team"/>




    </TableRow>



</TableLayout>