<?xml version="1.0" encoding="utf-8"?>
<TableLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableRow>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/creator_textView"
            />

        <TextView
            android:id="@+id/creator_textView"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            />
    </TableRow>
    <TableRow>
        <TextView
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text="@string/match_type"
            />

        <TextView
            android:id="@+id/type_of_match_ads"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            />

    </TableRow>
    <TableRow>

        <TextView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:text="@string/place_textView"
        />

        <TextView
            android:id="@+id/place_ads"
            android:layout_height="match_parent"
            android:layout_width="match_parent"
            android:layout_weight="1"
            />
    </TableRow>

</TableLayout>