<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    tools:context=".CreateAdsActivity">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:background="?attr/colorPrimary"
                    app:popupTheme="@style/AppTheme.PopupOverlay" />
        </android.support.design.widget.AppBarLayout>


        <Spinner
            android:id="@+id/type_of_match_spinner"
            android:layout_width="176dp"
            android:layout_height="30dp"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/number_of_player_editText"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:textColor="#68AC61"
            app:layout_constraintEnd_toEndOf="@+id/set_place_button"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />


        <TextView
            android:id="@+id/set_place_textView"
            android:layout_width="wrap_content"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/set_place"
            android:textColor="#68AC61"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/set_date_textView" />

        <TextView
            android:id="@+id/set_place_button"
            android:layout_width="150dp"
            android:layout_height="27dp"
            android:layout_marginBottom="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:hint="@string/set_place_button"
            android:onClick="setTime"
            android:textColor="#68AC61"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/number_of_player_editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.466"
            app:layout_constraintStart_toEndOf="@+id/set_place_textView"
            app:layout_constraintTop_toBottomOf="@+id/button"
            app:layout_constraintVertical_bias="0.526" />


        <Button
            android:id="@+id/confirm_ads_creation_button"
            style="@style/FirebaseUI.Button.AccountChooser.GoogleButton"
            android:layout_width="226dp"
            android:layout_height="46dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="211dp"
            android:backgroundTint="#68AC61"
            android:text="@string/confirm_ads_creation_button"
            android:textAlignment="center"
            android:textColor="#FFF"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/number_of_player_textView"
            app:layout_constraintVertical_bias="0.472" />

        <EditText
            android:id="@+id/number_of_player_editText"
            android:layout_width="107dp"
            android:layout_height="30dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="24dp"
            android:inputType="number"
            android:textColorHint="#68AC61"
            app:layout_constraintEnd_toEndOf="@+id/set_place_button"
            app:layout_constraintTop_toBottomOf="@+id/set_place_textView" />

        <TextView
            android:id="@+id/number_of_player_textView"
            android:layout_width="207dp"
            android:layout_height="30dp"
            android:layout_above="@+id/confirm_ads_creation_button"
            android:layout_alignStart="@+id/set_date_textView"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="24dp"
            android:labelFor="@id/number_of_player_editText"
            android:text="@string/number_of_player"
            android:textColor="#68AC61"
            android:textSize="20dp"
            app:layout_constraintEnd_toStartOf="@+id/number_of_player_editText"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/set_place_textView"
            app:layout_constraintTop_toBottomOf="@+id/set_place_textView" />

        <TextView
            android:id="@+id/set_date_textView"
            android:layout_width="63dp"
            android:layout_height="26dp"
            android:layout_marginTop="20dp"
            android:text="@string/set_date"
            android:textColor="#68AC61"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintStart_toStartOf="@+id/set_place_textView"
            app:layout_constraintTop_toBottomOf="@+id/type_of_match_textView" />

        <TextView
            android:id="@+id/set_time_textView"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/set_time"
            android:textColor="#68AC61"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/set_date_textView"
            app:layout_constraintEnd_toStartOf="@+id/button"
            app:layout_constraintTop_toBottomOf="@+id/type_of_match_spinner"
            app:layout_constraintVertical_bias="0.272" />

        <TextView
            android:id="@+id/button"
            android:layout_width="85dp"
            android:layout_height="26dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:layout_weight="1"
            android:hint="@string/set_time_button"
            android:onClick="setTime"
            android:textColor="#68AC61"
            android:textSize="20dp"
            app:layout_constraintEnd_toEndOf="@+id/set_place_button"
            app:layout_constraintTop_toBottomOf="@+id/type_of_match_spinner" />

        <TextView
            android:id="@+id/button1"
            android:layout_width="86dp"
            android:layout_height="27dp"
            android:layout_marginEnd="4dp"
            android:layout_marginTop="24dp"
            android:hint="@string/set_date_button"
            android:onClick="setDate"
            android:textColor="#FFF"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/button"
            app:layout_constraintEnd_toStartOf="@+id/set_time_textView"
            app:layout_constraintTop_toBottomOf="@+id/type_of_match_textView"
            app:layout_constraintVertical_bias="0.666" />

        <TextView
            android:id="@+id/type_of_match_textView"
            android:layout_width="115dp"
            android:layout_height="27dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="20dp"
            android:layout_weight="1"
            android:text="@string/match_type"
            android:textColor="#68AC61"
            android:textSize="20dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/type_of_match_spinner"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/set_place_textView"
            app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />





</android.support.constraint.ConstraintLayout>

