<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    >

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="1dp"
        android:visibility="visible"
        card_view:cardBackgroundColor="#FFF"
        card_view:cardElevation="15dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent">



            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="3dp"
                android:layout_marginTop="4dp"
                android:layout_marginBottom="4dp"
                android:layout_marginEnd="3dp">
                <TableRow>

                    <ImageView
                        android:layout_height="match_parent"
                        android:layout_width="60dp"
                        android:padding="1dp"
                        android:src="@drawable/icon"
                        android:layout_marginEnd="4dp"/>

                    <LinearLayout
                        android:layout_weight="1"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/itemTypeWhoPlaysTextView"
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_span="3"
                            android:layout_weight="1"
                            android:text="@string/item_type_who_plays"
                            android:textColor="#000"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            />

                        <TableLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content">

                            <TableRow>
                                <TextView
                                    android:id="@+id/itemPlaceWhoPlaysTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/item_place_who_plays"
                                    android:textColor="#000"
                                    android:textSize="18sp" />

                                <TextView
                                    android:id="@+id/itemDateWhoPlaysTextView"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:text="@string/item_date_who_plays"
                                    android:textColor="#000"
                                    android:textSize="18sp"/>

                                <TextView
                                    android:id="@+id/itemCreatorWhoPlaysTextView"
                                    android:layout_width="match_parent"
                                    android:layout_weight="1"
                                    android:layout_height="wrap_content"
                                    android:text="@string/item_creator_who_plays"
                                    android:textColor="#000"
                                    android:textSize="18sp"
                                    android:textStyle="italic"/>

                            </TableRow>

                        </TableLayout>

                    </LinearLayout>

                </TableRow>

            </TableLayout>

    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>